# MarketCruise

./: .gitignore  AGENTS.md  CLAUDE.md  High_Level_Plan.md  Plan_for_13_May.md  README.md  TEMP.md  config.yaml  cron_setup.sh  main.py  pyproject.toml  requirements.txt  test-beddy.py
.claude/: README.md  settings.json
.claude/agents/: market-analyst.md
.claude/commands/: check-gemini.md  merge-codex.md  refresh-kite.md  server.md  test.md
.claude/context/: conventions.md  quick-reference.md  session-log.md  troubleshooting.md
.codex/: README.md  settings.json
.codex/context/: conventions.md  quick-reference.md  session-log.md  troubleshooting.md
docs/: README.md  api.md  architecture.md  flow-test-checklist.md  setup.md  testing.md
src/agents/: base.py  news_analyst.py  options_analyst.py  orchestrator.py  portfolio_risk.py  technical_analyst.py
src/graphs/: daily_graph.py  feedback_graph.py
src/memory/: chroma_store.py  memory_manager.py  sqlite_store.py
src/server/: app.py
src/state/: schema.py
src/tools/: market_tools.py  news_tools.py  nse_tools.py  options_tools.py  portfolio_tools.py
src/utils/: logging.py
tests/: conftest.py
tests/e2e/: test_full_morning_run.py
tests/functional/: test_agents.py  test_agents_synthetic.py  test_daily_graph.py  test_daily_graph_flow.py  test_feedback_graph.py  test_server_api.py
tests/integration/: test_gemini_llm.py  test_tools_market.py  test_tools_news.py  test_tools_nse.py  test_tools_options.py  test_tools_portfolio.py
tests/unit/: test_chroma_store.py  test_feedback_accuracy.py  test_memory_manager.py  (+2 more)
(+12 files in other folders)
