[project]
name = "marketcruise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
markers = [
    "unit: No external I/O",
    "integration: Hits real external APIs",
    "functional: Full agent/graph runs (slow)",
    "e2e: HTTP end-to-end (slowest)",
]
