[project]
name = "marketcruise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "yfinance>=0.2.40",
    "kiteconnect>=5.0.1",
    "feedparser>=6.0.11",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
markers = [
    "unit: No external I/O",
    "integration: Hits real external APIs",
    "functional: Full agent/graph runs (slow)",
    "e2e: HTTP end-to-end (slowest)",
]
